--- a/packages/community/src/content/docs/guides/quick-start/umd.mdx
+++ b/packages/community/src/content/docs/guides/quick-start/umd.mdx
@@ -138,9 +138,7 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
             header: true,
           });
 
-          univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-            standalone: true,
-          });
+          univer.registerPlugin(UniverDocs.UniverDocsPlugin);
           univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin, {
             container: 'univerdoc',
             layout: {
