refactor: update configuration and remove unused files

--- a/packages/community/src/content/docs/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/guides/facade/general.mdx
@@ -244,7 +244,7 @@ Please refer to the following documentation to extend the Univer UI :
 - [Extending Canvas](/guides/customization/canvas/)
 - [Custom Theme](/guides/customization/theme)
 
-## ws
+## Websocket
 
 Facade provides a convenient API `createSocket` for creating a Websocket, simply by passing in a URL. You can then listen to open, message, close, and error events, and actively send messages with the send method and actively close with the close method.
 
