--- a/packages/community/src/content/docs/guides/introduction/index.mdx
+++ b/packages/community/src/content/docs/guides/introduction/index.mdx
@@ -195,4 +195,4 @@ Univer Pro currently provides the following features:
 - 🎚️ Live Share for collaborative browsing
 - 📤 Import / Export
 
-To learn more about our commercial edition or request a trial, please visit [here](/enterprises). 
+To learn more about our commercial edition or request a trial, please visit [here](/pro/enterprises). 
