--- a/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
@@ -244,7 +244,7 @@ univerAPI.executeCommand('univer.command.redo')
 - [拓展Canvas](/zh-cn/guides/customization/canvas/)
 - [自定义主题](/zh-cn/guides/customization/theme/)
 
-## ws
+## Websocket
 
 Facade 提供了一个便捷的 API `createSocket` 来创建 Websocket，传入一个 URL 即可。
 然后可以监听 open、message、close、error 事件，以及主动发送消息 send 方法和主动关闭 close 方法。
