--- a/packages/community/src/content/docs/zh-cn/guides/introduction/index.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/introduction/index.mdx
@@ -202,4 +202,4 @@ Univer Pro 目前提供了以下功能：
 - 🎚️ 协同浏览（Live Share）
 - 📤 导入 / 导出
 
-想进一步了解我们的商业版或者申请试用，请移步[这里](/zh-cn/enterprises)。
+想进一步了解我们的商业版或者申请试用，请移步[这里](/pro/zh-cn/enterprises)。
