--- a/packages/pro/src/content/docs/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/enterprises/index.mdx
@@ -1,18 +1,40 @@
 ---
-title: Feature Introduction
+title: Univer Pro Introduction
 ---
 
-We provide out-of-the-box services for users with collaboration needs such as **collaborative office** and **Live Share**.
+Univer Pro is a plug-and-play solution designed for a series of complex business needs. It adopts the interfaces, components, and event mechanisms publicly available in the Univer open-source version and carefully encapsulates them.
 
-### Collaborative Office
+Before you learn more about Univer Pro, we hope you understand:
 
-Edit the same document with your colleagues and see each other's edits in real time. We also provide storage and loading services for Univer documents, and will support features such as version history in the future.
+The difference between Univer Pro and the Univer open-source version is that Univer Pro focuses on solving complex business needs, while the Univer open-source version focuses on providing basic functions.
+
+If your business scenario is relatively simple, or Univer Pro cannot meet your special business needs, you can try to use the Univer open-source version with our [extension documentation](/guides/customization) to customize and develop the capabilities you need.
+
+For this reason, we provide the [Community Edition](/pro/enterprises/trial-version) of Univer Pro for you to experience for free.
+
+If Univer Pro happens to meet your needs, you can contact our team to get the official version of Univer Pro.
+
+## Feature Introduction
+
+Currently, Univer Pro supports the following features:
+
+### Collaborative Editing
+
+Edit the same document with your colleagues at the same time and view each other's editing content in real-time. At the same time, we provide storage and loading services for Univer documents, and will support functions such as history records in the future.
+
+### Import and Export
+
+Univer Pro supports the import and export of Excel files. You can import Excel files into Univer Pro for editing, and export data from Univer Pro to Excel files.
+
+### Data Connectors
+
+Univer Pro supports connecting to multiple data sources, and you can import data from data sources into Univer Pro for further editing.
 
 ### Live Share
 
-During collaborative office work with your colleagues, you can give presentations. Your colleagues can follow your perspective in real time, and can pause or resume following at any time.
+During collaborative work with your colleagues, you can give a presentation, and your colleagues can follow your perspective to view your operations in real-time, and can pause or continue to follow at any time.
 
-{/* copied from introduction.mdx */}
+## Get the Community Edition
 
-### Get the Community Edition
-Welcome to try our Community Edition! Please [click here](/enterprises/trial-version) to view the Community Edition user guide and start your exploration journey.
+We provide you with the Univer Pro Community Edition for free experience, you can [click here](/pro/enterprises/trial-version) to view the Community Edition trial guide.
+
