--- a/packages/community/src/content/docs/guides/facade/index.mdx
+++ b/packages/community/src/content/docs/guides/facade/index.mdx
@@ -1,35 +1,17 @@
 ---
-title: Using Facade
+title: Using Facade API
 sidebar:
   order: 1
 ---
 
-If you prefer to use a ready-to-use spreadsheet and don't want to deal with the underlying API of Univer, or if you are more inclined towards the usage style of Luckysheet, you can utilize the Facade API provided by `@univerjs/facade`. 
+The plugin capabilities of Univer are very powerful, allowing you to extend almost every aspect of Univer. However, in most cases, the overly flexible extension capabilities can make developers feel overwhelmed. Therefore, we provide `@univerjs/facade`, a simpler and easier-to-use panel API (Facade API) for Univer users.
+
+`@univerjs/facade` is suitable for everyone, especially for those who are familiar with Luckysheet's old users, or just want to use Univer's functions simply without intending to deeply extend users. With `@univerjs/facade`, you can quickly get started and easily implement various common CRUD functions.
+
+This document will detail how to use the API provided by `@univerjs/facade` to help you fully unleash the potential of Univer. If you want to see all the Facade APIs, please refer to the [API documentation](/api/facade) of `@univerjs/facade`. By learning and using these APIs, you will be able to develop powerful office applications more efficiently and conveniently.
 
 :::note
-In fact, Uniscript also uses the same API provided by `@univerjs/facade`, so the capabilities provided by `@univerjs/facade` align with what Uniscript offers.
-:::
-
-In this section, we will introduce the installation and basic usage of Facade.
-
-:::note[⚗️ Under Construction]
-We are still expanding the capabilities of Facade, and some functionalities supported by the underlying API may not be supported by Facade yet. If you encounter any such issues, please submit an issue to us or consider contributing with a pull request.
-:::
-
-:::note[Should I use Facade or the underlying API?]
-We recommend using the API if you fall into one of the following categories:
-
-1. You are new to Univer or are a Luckysheet user who wants to quickly get started with Univer.
-2. You are not very concerned with the plugin capabilities of Univer.
-
-We recommend using the underlying API if you have the following requirements:
-
-1. You are already familiar with Univer.
-2. You need to adjust the installed plugins on Univer according to your requirements.
-3. You need to develop custom plugins and access more of Univer's core and other plugins' capabilities.
-4. You seek optimal build size and performance.
-
-Note that Facade and the underlying API are not mutually exclusive. You can use them simultaneously.
+In fact, [Uniscript](/api/uniscript) also uses `@univerjs/facade`, so you can directly use the API provided by `@univerjs/facade` in the Uniscript panel created by `@univerjs/uniscript`.
 :::
 
 ## Installation
