--- a/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
@@ -1,18 +1,39 @@
 ---
-title: 功能介绍
+title: Univer Pro 介绍
 ---
 
-我们为有**协同办公**、**Live Share** 等需求的用户提供了开箱即用的服务。
+Univer Pro 是针对一系列复杂业务需求设计的即插即用解决方案。它采用了 Univer 开源版本所公开的接口、组件和事件机制，并对它们进行了精心封装。
+
+在进一步了解 Univer Pro 之前，我们希望你能理解：
+
+Univer Pro 与 Univer 开源版本的区别在于 Univer Pro 专注于解决复杂业务需求，而 Univer 开源版本则专注于提供基础功能。
+
+如果你的业务场景较为简单，又或是 Univer Pro 无法满足你的特殊业务需求，可以尝试使用 Univer 开源版本配合我们的[扩展文档](/zh-cn/guides/customization)自行定制开发你所需的能力。
+
+为此我们提供了 Univer Pro 的[社区版](/pro/zh-cn/enterprises/trial-version)以便你免费体验。
+
+如果 Univer Pro 恰好满足你的需求，那么你可以联系我们的团队获取 Univer Pro 的正式版本。
+
+## 功能介绍
+
+目前 Univer Pro 支持以下功能：
 
 ### 协同办公
 
 和你的同事同时编辑同一份文档，实时查看对方的编辑内容。同时我们提供 Univer 文档的存储和加载服务，后续还会支持历史记录等功能。
 
+### 导入导出
+
+Univer Pro 支持导入和导出 Excel 的功能，你可以将 Excel 文件导入到 Univer Pro 中进行编辑，也可以将 Univer Pro 中的数据导出到 Excel 文件中。
+
+### 数据连接器
+
+Univer Pro 支持连接多种数据源，你可以将数据源中的数据导入到 Univer Pro 中，以便进行进一步的编辑。
+
 ### Live Share
 
 在和你的同事协同办公时进行演示，你的同事可以跟随你的视角实时查看你的操作，并可以随时暂停或继续跟随。
 
-{/* copied from introduction.mdx */}
+## 获取社区版
 
-### 获取社区版
-欢迎尝试我们的社区版！请[点击这里](/zh-cn/enterprises/trial-version)查看社区版使用指南，开始您的探索之旅。
+我们为你提供了 Univer Pro 社区版供你免费体验，你可以[点击这里](/pro/zh-cn/enterprises/trial-version)查看社区版使用指南。
