docs: update docs

--- a/packages/pro/src/content/docs/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/enterprises/index.mdx
@@ -14,6 +14,10 @@ For this reason, we provide the [Community Edition](/pro/enterprises/trial-versi
 
 If Univer Pro happens to meet your needs, you can contact our team to get the official version of Univer Pro.
 
+## Online Demo
+
+Just like the Univer open-source version, we also provide an online demo for Univer Pro. You can [click here](/pro-examples/) to view the online demo of Univer Pro.
+
 ## Feature Introduction
 
 Currently, Univer Pro supports the following features:
@@ -25,6 +29,10 @@ Edit the same document with your colleagues at the same time and view each other
 ### Import and Export
 
 Univer Pro supports the import and export of Excel files. You can import Excel files into Univer Pro for editing, and export data from Univer Pro to Excel files.
+
+### Printing
+
+Univer Pro supports high-precision printing, you can print electronic documents into paper documents or output as PDF files.
 
 ### Data Connectors
 
