docs: fix typing

--- a/packages/community/src/content/docs/guides/facade/doc.mdx
+++ b/packages/community/src/content/docs/guides/facade/doc.mdx
@@ -19,7 +19,7 @@ Style information is stored in a separate data structure and is associated with 
 For elements such as line breaks, page breaks, sections, paragraphs, tables, etc., the text content is marked with different special characters that are converted to the corresponding element at rendering time.
 
 :::tip
-Want to learn more about document data structure design? We recommend reading [University Document Architecture and Module Design](/blog/univer-doc-architecture) and [Initial Exploration of Document Typesetting Design in Univer](/blog/doc-typesetting-design).
+Want to learn more about document data structure design? We recommend reading [Univer Document Architecture and Module Design](/blog/univer-doc-architecture) and [Initial Exploration of Document Typesetting Design in Univer](/blog/doc-typesetting-design).
 :::
 
 ### Create Document
@@ -160,6 +160,6 @@ univerAPI.executeCommand("doc.command.list-operation", {listType: 'ORDER_LIST'})
 
 For more documentation and APIs, please refer to:
 
-- [University Document Architecture and Module Design](/blog/univer-doc-architecture)
+- [Univer Document Architecture and Module Design](/blog/univer-doc-architecture)
 - [Initial Exploration of Document Typesetting Design in Univer](/blog/doc-typesetting-design)
 - [Facade API](/api/facade/)
