docs: update docs

--- a/packages/pro/src/content/docs/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/enterprises/index.mdx
@@ -14,11 +14,11 @@ For this reason, we provide the [Community Edition](/pro/enterprises/trial-versi
 
 If Univer Pro happens to meet your needs, you can contact our team to get the official version of Univer Pro.
 
-## Online Demo
+## 🎮 Online Demo
 
-Just like the Univer open-source version, we also provide an online demo for Univer Pro. You can [click here](/pro-examples/) to view the online demo of Univer Pro.
+Just like the Univer open-source version, we also provide an online demo for Univer Pro. You can [🎮 click here](/pro-examples/) to view the online demo of Univer Pro.
 
-## Feature Introduction
+## 🌟 Feature Introduction
 
 Currently, Univer Pro supports the following features:
 
@@ -42,7 +42,7 @@ Univer Pro supports connecting to multiple data sources, and you can import data
 
 During collaborative work with your colleagues, you can give a presentation, and your colleagues can follow your perspective to view your operations in real-time, and can pause or continue to follow at any time.
 
-## Get the Community Edition
+## 🍺 Get the Community Edition
 
 We provide you with the Univer Pro Community Edition for free experience, you can [click here](/pro/enterprises/trial-version) to view the Community Edition trial guide.
 
