--- a/packages/community/src/content/docs/guides/quick-start/umd.mdx
+++ b/packages/community/src/content/docs/guides/quick-start/umd.mdx
@@ -63,8 +63,6 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
           var univer = new UniverCore.Univer({
             theme: UniverDesign.defaultTheme,
-            locale: UniverCore.LocaleType.ZH_CN,
-            logLevel: UniverCore.LogLevel.VERBOSE,
           });
 
           univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
@@ -180,6 +178,7 @@ Univer can also be imported through UMD. It should be noted that Univer's plugin
       <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
       <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
 
+      <script src="https://unpkg.com/@univerjs/protocol/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
