docs: update pro docs

--- a/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
@@ -45,3 +45,12 @@ Univer Pro 支持连接多种数据源，你可以将数据源中的数据导入
 ## 获取社区版
 
 我们为你提供了 Univer Pro 社区版供你免费体验，你可以[点击这里](/pro/zh-cn/enterprises/trial-version)查看社区版使用指南。
+
+## 联系我们
+
+如果你对 Univer Pro 有任何疑问，或者希望深入了解 Univer Pro，请联系我们的团队：
+
+import { Image } from "astro:assets";
+import QrCodeImg from "./imgs/business-qr-code.png";
+
+<Image src={QrCodeImg} style="margin: 1rem auto" width={300} alt="DreamNum QR Code" />
