docs: update pro docs

--- a/packages/pro/src/content/docs/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/enterprises/index.mdx
@@ -10,13 +10,71 @@ The difference between Univer Pro and the Univer open-source version is that Uni
 
 If your business scenario is relatively simple, or Univer Pro cannot meet your special business needs, you can try to use the Univer open-source version with our [extension documentation](/guides/customization) to customize and develop the capabilities you need.
 
-For this reason, we provide the [Community Edition](/pro/enterprises/trial-version) of Univer Pro for you to experience for free.
+For this reason, we provide the [Community Edition](/pro/enterprises/community-edition) of Univer Pro for you to experience for free.
 
 If Univer Pro happens to meet your needs, you can contact our team to get the official version of Univer Pro.
 
 ## 🎮 Online Demo
 
 Just like the Univer open-source version, we also provide an online demo for Univer Pro. You can [🎮 click here](/pro-examples/) to view the online demo of Univer Pro.
+
+## 🎁 Compare Community Edition and Standard Edition
+
+The differences between the Univer Pro Community Edition and the Standard Edition are as follows:
+
+<table>
+  <tr>
+    <td colspan="2">&nbsp;</td>
+    <td>Community Edition</td>
+    <td>Standard Edition</td>
+  </tr>
+  <tr>
+    <td colspan="2">Development and Deployment</td>
+    <td>Docker / One-click run script</td>
+    <td><strong>npm packages</strong> / Docker / One-click run script</td>
+  </tr>
+  <tr>
+    <td rowspan="7">Univer Sheet Features</td>
+    <td>Collaborative Editing</td>
+    <td>Max 50 people, 100 documents</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Import</td>
+    <td>Document limit 1MB</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Export</td>
+    <td>Document limit 1MB</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Printing</td>
+    <td>Print limit 3 pages</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Data Connectors (dev)</td>
+    <td>Max 2 data sources, 4 tables</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Pivot Table (dev)</td>
+    <td>Single table pivot only</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td>Charts (dev)</td>
+    <td>Basic charts only</td>
+    <td><strong>Unlimited</strong></td>
+  </tr>
+  <tr>
+    <td colspan="2">Technical Support</td>
+    <td>Community support</td>
+    <td><strong>Dedicated customer service</strong></td>
+  </tr>
+</table>
 
 ## 🌟 Feature Introduction
 
@@ -44,5 +102,5 @@ During collaborative work with your colleagues, you can give a presentation, and
 
 ## 🍺 Get the Community Edition
 
-We provide you with the Univer Pro Community Edition for free experience, you can [click here](/pro/enterprises/trial-version) to view the Community Edition trial guide.
+We provide you with the Univer Pro Community Edition for free experience, you can [click here](/pro/enterprises/community-edition) to view the Community Edition trial guide.
 
