docs: update docs

--- a/packages/community/src/content/docs/zh-cn/guides/quick-start/installation.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/quick-start/installation.mdx
@@ -93,7 +93,7 @@ univer.registerPlugin(UniverUIPlugin, {
   footer: true,
 });
 
-univer.registerPlugin(UniverDocs.UniverDocsPlugin);
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin, {
   container: 'univerdoc',
   layout: {
