--- a/packages/community/src/content/docs/guides/quick-start/index.mdx
+++ b/packages/community/src/content/docs/guides/quick-start/index.mdx
@@ -71,7 +71,7 @@ Congratulations on making it this far! You're well on your way to mastering Univ
 
 - **🔰 Installation & Usage**: If you want to learn how to manually set up a Univer project from scratch, check out the [Installation & Usage](/quick-start/installation/) chapter. It will guide you through the process step by step.
 - **🏗️ Advanced Usage**: Ready to take your Univer skills to the next level? The [Advanced Usage](/guides/advanced-use) chapter covers more advanced topics and techniques for working with Univer.
-- **📚 Tutorials**: Looking for practical examples and real-world use cases? Head over to the [Tutorials](/guides/tutorials) chapter, where you'll find a collection of hands-on tutorials that demonstrate how to build various applications and features with Univer.
+- **📚 Tutorials**: Looking for practical examples and real-world use cases? Head over to the [Tutorials](/guides/tutorials/csv-import-plugin) chapter, where you'll find a collection of hands-on tutorials that demonstrate how to build various applications and features with Univer.
 - **🧱 Concepts & Architecture**: Want to dive deep into the inner workings of Univer? The [Concepts & Architecture](/guides/concepts-and-architecture/architecture/) chapter provides a comprehensive overview of Univer's architecture, core concepts, and design principles.
 - **🪄 Customizing Univer**: Interested in extending and customizing Univer to fit your specific needs? The [Customizing Univer](/guides/customization) chapter is your go-to resource for learning how to create custom plugins, themes, and extensions.
 - **🎢 Playground**: Don't forget to explore the [Playground page](/playground), where you can experiment with various Univer demos and see the library in action.
