docs: update pro docs

--- a/packages/pro/src/content/docs/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/enterprises/index.mdx
@@ -46,7 +46,7 @@ The differences between the Univer Pro Community Edition and the Standard Editio
   </tr>
   <tr>
     <td>Export</td>
-    <td>Document limit 1MB</td>
+    <td>Document limit 10000 cells</td>
     <td><strong>Unlimited</strong></td>
   </tr>
   <tr>
