--- a/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/index.mdx
@@ -46,7 +46,7 @@ Univer Pro 社区版和标准版的区别如下：
   </tr>
   <tr>
     <td>导出</td>
-    <td>文档上限 1MB</td>
+    <td>文档上限 10000 单元格</td>
     <td><strong>无限制</strong></td>
   </tr>
   <tr>
