chore: update community guide

--- a/packages/pro/src/content/docs/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/enterprises/community-edition.mdx
@@ -30,11 +30,7 @@ We provide excellent technical metrics to allow you and your team to work in a h
   <TabItem label="docker-compose">
     Environment: Linux、Mac、Windows/WSL.
 
-    1. Clone this repository.
-
-    ```bash
-    git clone https://github.com/dream-num/helm-charts.git
-    ```
+    1. Download repository from [release](https://github.com/dream-num/helm-charts/releases) 
 
     or download from [this](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip).
 
