--- a/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
@@ -30,11 +30,7 @@ import { TabItem, Tabs } from "@astrojs/starlight/components";
   <TabItem label="docker-compose">
     系统环境：Linux、Mac、Windows/WSL。
 
-    1. 克隆本仓库。
-
-    ```bash
-    git clone https://github.com/dream-num/helm-charts.git
-    ```
+    1. 下载对应[版本](https://github.com/dream-num/helm-charts/releases)
 
     或点击[此处](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)下载。
 
