chore: update community guide

--- a/packages/pro/src/content/docs/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/enterprises/community-edition.mdx
@@ -173,8 +173,8 @@ Port Usage
 Replace localhost with the local IP for `S3_ENDPOINT_PUBLIC` config in .env file, it make people can use `Download as` in local area network.
 
 ```bash
-# Example: S3_ENDPOINT_PUBLIC=http://127.0.0.1:9000
-# Replace to: S3_ENDPOINT_PUBLIC=http://192.168.50.172:9000
+# Example: S3_ENDPOINT_PUBLIC=http://univer-minio:9000
+# Replace to: S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
 ```
 
 If you are still unable to resolve your issue, [contact the community](/guides/introduction#whats-next) for assistance.
