chore: update community guide

--- a/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
@@ -178,8 +178,8 @@ Univer 服务默认端口如下：
 替换 .env 文件的 `S3_ENDPOINT_PUBLIC` 为本机 ip，才能使局域网内`另存为`功能正常。
 
 ```bash
-# 如 S3_ENDPOINT_PUBLIC=http://127.0.0.1:9000
-# 替换为 S3_ENDPOINT_PUBLIC=http://192.168.50.172:9000
+# 如 S3_ENDPOINT_PUBLIC=http://univer-minio:9000
+# 替换为 S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
 ```
 
 若仍然不能解决您的问题，请[联系社区](/zh-cn/guides/introduction#下一步)获取帮助。
