docs: update docs

--- a/packages/community/src/content/docs/zh-cn/guides/configuration/register-plugin.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/configuration/register-plugin.mdx
@@ -95,6 +95,28 @@ import { FUniver } from "@univerjs/facade";
 const univerAPI = FUniver.newAPI(univer);
 ```
 
+### 数字格式
+
+#### 安装
+
+```bash
+pnpm add @univerjs/sheets-numfmt
+```
+
+#### 引入
+
+```typescript
+import '@univerjs/sheets-numfmt/lib/index.css';
+
+import { UniverSheetsNumfmtPlugin } from '@univerjs/sheets-numfmt';
+```
+
+#### 注册
+
+```typescript
+univer.registerPlugin(UniverSheetsNumfmtPlugin);
+```
+
 ### 查找 & 替换
 
 #### 安装
