doc: add 0.1.7 files hash

--- a/packages/pro/src/content/docs/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/enterprises/community-edition.mdx
@@ -56,12 +56,20 @@ We provide excellent technical metrics to allow you and your team to work in a h
 
   <TabItem label="windows-lite">
     1. Download the [Windows 10/11 x64 version](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip).
-
+        
+        - Version: `v0.1.7`
+        - SHA1: `ef14580acb96bad2cb20be67c5487f7df904eb1c`
+        - SHA256: `4294dbe68db319dfd4dcbc4a22e6a9d6435b1f5039594064df18144c9a15bb09`
+    
     2. Run the `start_apps.bat` file in the extracted directory, ensuring that the firewall allows the program to run during the process.
   </TabItem>
 
   <TabItem label="linux-lite">
     1. Download the [linux x64 version](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/linux.zip).
+
+        - Version: `v0.1.7`
+        - SHA1: `c477774f94ccbc6d7729fd793fcf921e6a50344c`
+        - SHA256: `0f70c5edcd4112f23ff8c78678cfeb341f109ea4779275cdd23023f8c740c662`
 
     2. In the extracted directory, execute the command.
     ```bash
@@ -71,6 +79,10 @@ We provide excellent technical metrics to allow you and your team to work in a h
 
   <TabItem label="mac-lite">
     1. Download the [Apple silicon version](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/mac.zip).
+        
+        - Version: `v0.1.7`
+        - SHA1: `a6a44d023a7dfef1c45b9373931d3e34534f4b68`
+        - SHA256: `d74ee936262e7521cfb8957a67557c0969cb3e5061c27e22479582f3fe100f01`
 
     2. In the extracted directory, execute the command.
     Note: mac requires the setting to allow non-App Store applications to run in Settings and Privacy,[see the common questions](#Troubleshooting)。
