--- a/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
@@ -56,12 +56,20 @@ import { TabItem, Tabs } from "@astrojs/starlight/components";
 
   <TabItem label="windows-lite">
     1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip) Windows 10/11 x64版本。
+      
+        - 版本号: `v0.1.7`
+        - SHA1: `ef14580acb96bad2cb20be67c5487f7df904eb1c`
+        - SHA256: `4294dbe68db319dfd4dcbc4a22e6a9d6435b1f5039594064df18144c9a15bb09`
 
     2. 进入解压目录，运行 start_apps.bat 文件。请确保在运行过程中允许防火墙执行此程序。
   </TabItem>
 
   <TabItem label="linux-lite">
     1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/linux.zip) linux x64版本。
+
+        - 版本号: `v0.1.7`
+        - SHA1: `c477774f94ccbc6d7729fd793fcf921e6a50344c`
+        - SHA256: `0f70c5edcd4112f23ff8c78678cfeb341f109ea4779275cdd23023f8c740c662`
 
     2. 进入解压目录下执行命令。
     ```bash
@@ -71,6 +79,10 @@ import { TabItem, Tabs } from "@astrojs/starlight/components";
 
   <TabItem label="mac-lite">
     1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/mac.zip) Apple silicon版本。
+
+        - 版本号: `v0.1.7`
+        - SHA1: `a6a44d023a7dfef1c45b9373931d3e34534f4b68`
+        - SHA256: `d74ee936262e7521cfb8957a67557c0969cb3e5061c27e22479582f3fe100f01`
 
     2. 进入解压目录下执行命令。
     注：mac需要在设置与隐私中允许非 App store 应用运行，[详见常见问题](#常见问题)。
